...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/titleID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"
                android:importantForAutofill="no" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/companyID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company"
                android:inputType="text"
                android:importantForAutofill="no" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/locationID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text"
                android:importantForAutofill="no" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/locationCostOfLivingID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_cost_of_living"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/yearlySalaryID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/yearly_salary"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/yearlyBonusID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/yearly_bonus"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/weeklyTeleworkDaysID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weekly_telework_days"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/yearlyLeaveTimeDaysID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/yearly_leave_time_days"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="229dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/numberCompanySharesID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_company_shares"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/offerSaveJobDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_job_offer"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/offerBackToMainMenuButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_main_menu"
                android:textAllCaps="false" />

        </LinearLayout>
...
