...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/enterOrEditCurrentJobButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_or_edit_current_job"
                android:textAllCaps="false" />

        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/enterJobOfferButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_job_offer"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/adjustComparisonSettingsButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adjust_comparison_settings"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/compareJobOffersButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compare_jobs_offers"
                android:textAllCaps="false" />
        </LinearLayout>

...
